Closed Bug 1278505 Opened 8 years ago Closed 8 years ago

Save As PDF causes: [Child 91980] ###!!! ASSERTION: Deallocator for PPrintProgressDialogChild should not be called on nsPrintingProxy.: 'Not Reached', file embedding/components/printingui/ipc/nsPrintingProxy.cpp

Categories

(Core :: Printing: Output, defect, P1)

x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
e10s + ---
firefox49 --- fixed
firefox50 --- fixed

People

(Reporter: jwatt, Assigned: ting)

References

Details

(Whiteboard: e10st?)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1278254 +++

After getting the console output listed in bug 1278503 comment 0 on opening the Print dialog, if I then go on to select |PDF > Save as PDF...| instead of clicking Cancel the PDF does save successfully, but I get:

[Parent 91978] WARNING: NS_ENSURE_SUCCESS(*result, true) failed with result 0x80004001: file /Users/jonathan/moz/trees/i/embedding/components/printingui/ipc/PrintingParent.cpp, line 66
[Child 91980] ###!!! ASSERTION: Deallocator for PPrintProgressDialogChild should not be called on nsPrintingProxy.: 'Not Reached', file /Users/jonathan/moz/trees/i/embedding/components/printingui/ipc/nsPrintingProxy.cpp, line 232
JavaScript error: chrome://global/content/browser-content.js, line 659: TypeError: printSettings is null

while Firefox creates the PDF.
tracking-e10s: --- → +
Priority: -- → P1
Whiteboard: e10st?
:mconley, though AllocPPrintProgressDialogChild() is guaranteed won't be called, but DeallocPPrintProgressDialogChild() can be called from PPrintingChild::DeallocSubtree() or PPrintingChild::RemoveManagee(), is NS_NOTREACHED() necessary?
Flags: needinfo?(mconley)
(In reply to Ting-Yu Chou [:ting] from comment #1)
> :mconley, though AllocPPrintProgressDialogChild() is guaranteed won't be
> called, but DeallocPPrintProgressDialogChild() can be called from
> PPrintingChild::DeallocSubtree() or PPrintingChild::RemoveManagee(), is
> NS_NOTREACHED() necessary?

I guess I hadn't considered those cases for deallocation. I think it's fine to remove that NS_NOTREACHED.
Flags: needinfo?(mconley)
Comment on attachment 8773567 [details]
Bug 1278505 - Remove unneeded NS_NOTREACHED from DeallocPPrintProgressDialogChild().

https://reviewboard.mozilla.org/r/66260/#review63242
Attachment #8773567 - Flags: review?(mconley) → review+
Try looks good.
Assignee: nobody → janus926
Keywords: checkin-needed
Pushed by kchen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/81e206ee8ba7
Remove unneeded NS_NOTREACHED from DeallocPPrintProgressDialogChild(). r=mconley
Keywords: checkin-needed
Can we uplift this to aurora and/or beta?
Flags: needinfo?(janus926)
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/da083c636752
Remove unneeded NS_NOTREACHED from DeallocPPrintProgressDialogChild(). r=mconley
https://hg.mozilla.org/mozilla-central/rev/81e206ee8ba7
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Not sure where I did wrong, but now there're two revisions with the patch...
Flags: needinfo?(janus926) → needinfo?(cbook)
Comment on attachment 8773567 [details]
Bug 1278505 - Remove unneeded NS_NOTREACHED from DeallocPPrintProgressDialogChild().

Approval Request Comment
[Feature/regressing bug #]: 1090444
[User impact if declined]: warning or environment variable XPCOM_DEBUG_BREAK defined behavior with the debug build
[Describe test coverage new/current, TreeHerder]: existed tests
[Risks and why]: low, removed just the unneeded NS_NOTREACHED
[String/UUID change made/needed]: none
Attachment #8773567 - Flags: approval-mozilla-aurora?
Comment on attachment 8773567 [details]
Bug 1278505 - Remove unneeded NS_NOTREACHED from DeallocPPrintProgressDialogChild().

Fix an assert, taking it.
Attachment #8773567 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: needinfo?(cbook)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: