Bug 1278505 - Remove unneeded NS_NOTREACHED from DeallocPPrintProgressDialogChild(). r=mconley, a=sledru

MozReview-Commit-ID: 7WvZM390h8W